@@ -1,5 +1,6 @@
 package com.familie.cheltuieli_familie.repository;
 
+import com.familie.cheltuieli_familie.model.Category;
 import com.familie.cheltuieli_familie.model.Expense;
 import com.familie.cheltuieli_familie.model.ExpenseItem;
 import org.junit.jupiter.api.DisplayName;
@@ -12,7 +13,6 @@ import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -24,6 +24,9 @@ class ExpenseItemRepositoryTest {
     private ExpenseItemRepository expenseItemRepository;
 
     @Autowired
+    private CategoryRepository categoryRepository;
+
+    @Autowired
     private ExpenseRepository expenseRepository;
 
     @Test
@@ -31,7 +34,7 @@ class ExpenseItemRepositoryTest {
     void shouldGenerateIdWhenExpenseItemIsSaved() {
         Expense expense = new Expense();
         expense.setAmount(BigDecimal.valueOf(100));
-        expense.setExpense_date(LocalDateTime.now());
+        expense.setExpenseDate(LocalDateTime.now());
         Expense savedExpense = expenseRepository.save(expense);
 
         ExpenseItem item = new ExpenseItem();
@@ -50,7 +53,7 @@ class ExpenseItemRepositoryTest {
     void shouldFindAllExpenseItems() {
         Expense expense = new Expense();
         expense.setAmount(BigDecimal.valueOf(50));
-        expense.setExpense_date(LocalDateTime.now());
+        expense.setExpenseDate(LocalDateTime.now());
         Expense savedExpense = expenseRepository.save(expense);
 
         ExpenseItem item1 = new ExpenseItem();
@@ -70,7 +73,7 @@ class ExpenseItemRepositoryTest {
 
         List<String> itemNames = items.stream()
                 .map(ExpenseItem::getItemName)
-                .collect(Collectors.toList());
+                .toList();
 
         assertTrue(itemNames.contains("Milk"));
         assertTrue(itemNames.contains("Eggs"));
@@ -82,7 +85,7 @@ class ExpenseItemRepositoryTest {
     void shouldUpdateExpenseItemAmount() {
         Expense expense = new Expense();
         expense.setAmount(BigDecimal.valueOf(70));
-        expense.setExpense_date(LocalDateTime.now());
+        expense.setExpenseDate(LocalDateTime.now());
         Expense savedExpense = expenseRepository.save(expense);
 
         ExpenseItem item = new ExpenseItem();
@@ -103,7 +106,7 @@ class ExpenseItemRepositoryTest {
     void shouldDeleteExpenseItem() {
         Expense expense = new Expense();
         expense.setAmount(BigDecimal.valueOf(90));
-        expense.setExpense_date(LocalDateTime.now());
+        expense.setExpenseDate(LocalDateTime.now());
         Expense savedExpense = expenseRepository.save(expense);
 
         ExpenseItem item = new ExpenseItem();
@@ -120,11 +123,34 @@ class ExpenseItemRepositoryTest {
     }
 
     @Test
+    @DisplayName("Should NOT delete parent Expense when ExpenseItem is deleted")
+    void shouldNotDeleteExpenseWhenItemIsDeleted() {
+        // Arrange
+        Expense expense = new Expense();
+        expense.setAmount(BigDecimal.TEN);
+        expense.setExpenseDate(LocalDateTime.now());
+        Expense savedExpense = expenseRepository.save(expense);
+
+        ExpenseItem item = new ExpenseItem();
+        item.setItemName("Temporary Item");
+        item.setAmount(BigDecimal.TEN);
+        item.setExpense(savedExpense);
+        ExpenseItem savedItem = expenseItemRepository.save(item);
+
+        // Act
+        expenseItemRepository.delete(savedItem);
+
+        // Assert
+        assertTrue(expenseRepository.findById(savedExpense.getId()).isPresent(),
+                "Parent Expense should still exist!");
+    }
+
+    @Test
     @DisplayName("Should save ExpenseItem with Expense association")
     void shouldSaveExpenseItemWithExpenseAssociation() {
         Expense expense = new Expense();
         expense.setAmount(BigDecimal.valueOf(120));
-        expense.setExpense_date(LocalDateTime.now());
+        expense.setExpenseDate(LocalDateTime.now());
         Expense savedExpense = expenseRepository.save(expense);
 
         ExpenseItem item = new ExpenseItem();
@@ -135,5 +161,59 @@ class ExpenseItemRepositoryTest {
         ExpenseItem savedItem = expenseItemRepository.save(item);
 
         assertEquals(savedExpense.getId(), savedItem.getExpense().getId());
+    }
+
+    @Test
+    @DisplayName("Should save ExpenseItem with Category association")
+    void shouldSaveExpenseItemWithCategory() {
+        // Arrange
+        Category category = new Category();
+        category.setName("Dairy");
+        Category savedCategory = categoryRepository.save(category);
+
+        ExpenseItem item = new ExpenseItem();
+        item.setItemName("Yogurt");
+        item.setAmount(BigDecimal.valueOf(4));
+        item.setCategory(savedCategory);
+
+        // Act
+        ExpenseItem savedItem = expenseItemRepository.save(item);
+
+        // Assert
+        assertNotNull(savedItem.getCategory());
+        assertEquals("Dairy", savedItem.getCategory().getName());
+    }
+
+    @Test
+    @DisplayName("Should have default quantity as 1 when not specified")
+    void shouldHaveDefaultQuantity() {
+        // Arrange
+        ExpenseItem item = new ExpenseItem();
+        item.setItemName("Test Item");
+        item.setAmount(BigDecimal.TEN);
+
+        // Act
+        ExpenseItem savedItem = expenseItemRepository.save(item);
+
+        // Assert
+        assertEquals(0, BigDecimal.ONE.compareTo(savedItem.getQuantity()));
+    }
+
+    @Test
+    @DisplayName("Constraint: Should correctly save decimal quantities")
+    void shouldSaveDecimalQuantity() {
+        Expense expense = new Expense();
+        expense.setAmount(BigDecimal.valueOf(20));
+        Expense savedExpense = expenseRepository.save(expense);
+
+        ExpenseItem item = new ExpenseItem();
+        item.setItemName("Mere");
+        item.setAmount(BigDecimal.valueOf(15.5));
+        item.setQuantity(BigDecimal.valueOf(2.50)); // 2.5 kg
+        item.setExpense(savedExpense);
+
+        ExpenseItem savedItem = expenseItemRepository.save(item);
+
+        assertEquals(0, BigDecimal.valueOf(2.50).compareTo(savedItem.getQuantity()));
     }
 }
